--- a/app/renderer/main/index.html
+++ b/app/renderer/main/index.html
@@ -15,7 +15,7 @@
     </script>
   </head>
   <body >
-    <div id="root">loading</div>
+    <div id="root" style="height: 100%">loading</div>
     <script>
       {
         const scripts = [];
