--- a/app/renderer/basic/index.html
+++ b/app/renderer/basic/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="../assets/stylesheets/loading-widget.css" />
     <script>
       (function() {
         if (!process.env.HOT) {
@@ -15,7 +16,9 @@
     </script>
   </head>
   <body>
-    <div id="root">loading</div>
+    <div id="root">
+      <div class="loading-widget"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
+    </div>
     <script>
       {
         const scripts = [];
